--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,14 +11,29 @@
 }
 
 h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+   text-shadow: 5px 5px 50px rgba(0, 0, 0, 0.493);
+}
+
+h1,
 h2 {
    text-align: center;
 }
 
 body {
    background-image: url("../img/bg.jpg");
+   background-attachment: fixed;
    width: 100%;
    font-family: "Roboto", sans-serif;
+}
+
+div {
+   filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 0.555));
 }
 
 /******************** menu-main-section -- bootstrap modification ***********************/
