--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,8 @@ h4,
 h5,
 h6,
 p {
-   text-shadow: 5px 5px 50px rgba(0, 0, 0, 0.493);
+   /* text-shadow: 5px 5px 50px rgba(0, 0, 0, 0.493); */
+   filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 0.555));
 }
 
 h1,
@@ -32,9 +33,9 @@ body {
    font-family: "Roboto", sans-serif;
 }
 
-div {
+/* div {
    filter: drop-shadow(0 0 0.75rem rgba(0, 0, 0, 0.555));
-}
+} */
 
 /******************** menu-main-section -- bootstrap modification ***********************/
 
